--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Todo App",
+  "name": "Simple Todo App Using React. By: Dev. Ali Samir",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "to-do-list.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "to-do-list.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "to-do-list.png",
       "type": "image/png",
       "sizes": "512x512"
     }
